# raylib-rubamazzetto-client

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  TODO  mkguielement  mkscene
doc/html/: README_8md.html  ResourceManager_8c.html  ResourceManager_8h.html  ResourceManager_8h.js  ResourceManager_8h_source.html  SceneLoadScreen_8h.html  SceneLoadScreen_8h_source.html  SceneManager_8c.html  SceneManager_8h.html  SceneManager_8h_source.html  SceneSplashScreen_8c.html  SceneSplashScreen_8c.js  SceneSplashScreen_8h.html  SceneSplashScreen_8h_source.html  annotated.html  classes.html  dir_1d637129aa84760b9947f02930732156.html  dir_1d637129aa84760b9947f02930732156.js  dir_599b8f1f2ff57000baa5ade9aac495d5.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  logger_8c.html  logger_8h.html  logger_8h_source.html  main_8c.html  main_8c.js  menudata.js  structScene.html  (+9 more)
doc/latex/: ResourceManager_8c.tex  ResourceManager_8h.tex  ResourceManager_8h_source.tex  SceneLoadScreen_8h.tex  SceneLoadScreen_8h_source.tex  SceneManager_8h.tex  SceneManager_8h_source.tex  SceneSplashScreen_8h.tex  dir_1d637129aa84760b9947f02930732156.tex  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  index.tex  structScene.tex  structSceneManager__t.tex  union____Resource__u.tex
docs/: DoxyHome.md  header.html
docs/html/: Config_8h.html  Config_8h.js  Config_8h_source.html  DoxyHome_8md.html  NewScene_8c.html  NewScene_8c.js  NewScene_8h.html  NewScene_8h.js  NewScene_8h_source.html  README_8md.html  ResourceManager_8c.html  ResourceManager_8c.js  ResourceManager_8h.html  ResourceManager_8h.js  ResourceManager_8h_source.html  SceneLoadScreen_8h.js  (+245 more)
include/: Config.h  ResourceManager.h  Scene.h  SceneManager.h  User.h  card.h  config.h  logger.h
source/: ResourceManager.c  SceneManager.c  User.c  card.c  config.c  logger.c  main.c  raygui.c
test/: test_card.c  test_easing.c  test_list.c  test_user.c
(+396 files in other folders)
